...

    public var title: String {
        switch self {
        case .solve:
            return "Solve"
        case .operate:
            return "Operate"
        case .analyze:
            return "Analyze"
        case .spaces:
            return "Spaces"
        case .library:
            return "Library"
        }
    }

    public var systemImageName: String {
        switch self {
        case .solve:
...
